--- a/.github/workflows/compile_latex.yml
+++ b/.github/workflows/compile_latex.yml
@@ -1,34 +1,24 @@
-name: Build and Deploy LaTeX document
+name: Build LaTeX Document
 
 on:
   push:
-    branches:
-      - main
-    paths:
-      - '**/*.tex'
-
+    tags:
+      - "v*"
 jobs:
-  build_and_deploy:
+  build_latex:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Set up Git repository
+      - name: Set Up Git Repository
         uses: actions/checkout@v4
-
-      - name: Compile LaTeX document
+      - name: Compile LaTeX Document
         uses: xu-cheng/latex-action@v3
         with:
-          root_file: main.tex  # Sostituisci con il tuo file .tex principale
-
-      - name: Upload PDF file as artifact
-        uses: actions/upload-artifact@v4
+          work_in_root_file_dir: true
+          root_file: |
+            src/main.tex
+      - name: Release
+        uses: softprops/action-gh-release@v2
         with:
-          name: PDF
-          path: main.pdf
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          publish_dir: .  # Puoi specificare una sottocartella se necessario, ad esempio "./pdfs"
-          publish_branch: main  # Utilizza il branch corrente, senza bisogno di gh-pages
-          personal_token: ${{ secrets.GITHUB_TOKEN }}
+          generate_release_notes: true
+          files: |
+            src/main.pdf
