--- a/.github/workflows/compile_latex.yml
+++ b/.github/workflows/compile_latex.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy LaTeX document
+name: Build and Deploy LaTeX Document
 
 on:
   push:
@@ -6,21 +6,30 @@ on:
       - main
     paths:
       - "src/*.tex"
+
 jobs:
   build_latex:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Set Up Git Repository
+      - name: Set up Git repository
         uses: actions/checkout@v4
-      - name: Compile LaTeX Document
+
+      - name: Get last modified .tex file
+        id: get-tex-file
+        run: |
+          # Trova l'ultimo file .tex modificato e salvalo in una variabile
+          TEX_FILE=$(git diff --name-only HEAD^ HEAD | grep 'src/.*\.tex$' | head -n 1)
+          echo "::set-output name=tex_file::$TEX_FILE"
+
+      - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v3
         with:
+          root_file: ${{ steps.get-tex-file.outputs.tex_file }}
           work_in_root_file_dir: true
-          root_file: |
-            src/boh.tex
-      - name: Release
-        uses: softprops/action-gh-release@v2
+
+      - name: Deploy PDF to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          generate_release_notes: true
-          files: |
-            src/boh.pdf
+          publish_dir: src  # Carica il PDF compilato dalla cartella src
+          personal_token: ${{ secrets.GITHUB_TOKEN }}
