--- a/.github/workflows/compile_latex.yml
+++ b/.github/workflows/compile_latex.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v3
         with:
-          root_file: src/boh.tex
+          root_file: src/main.tex
           work_in_root_file_dir: true
 
       - name: Deploy PDF to GitHub Pages
