--- a/.github/workflows/compile_latex.yml
+++ b/.github/workflows/compile_latex.yml
@@ -1,28 +1,79 @@
-name: Build and Deploy LaTeX Document
+# This Action autogenerates PDFs and standalone HTML
+# out of your Overleaf projects (or any LaTeX-live project).
+#
+# PDF  generator: pdflatex
+# HTML generator: htlatex
+#
+# Both tools come from LaTeX Live and are executed on
+# the latest version of Ubuntu.
+#
+#    Given:
+#       A repository with a LaTeX project with main.tex in the root folder
+#
+#    On every push:
+#       This GitHub Action builds the project with LaTeX Live.
+#       A   PDF version of main.tex is uploaded to a Release called "Current."
+#           (Make sure that release exists first)
+#       An HTML version of main.tex is uploaded to a new branch called gh-pages.
+#           (Make sure GitHub Pages is active and reads from the gh-pages branch)
 
+name: Build and Deploy LaTeX Project
+
+permissions: write-all
+
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches:
-      - main
-    paths:
-      - "src/*.tex"
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build_latex:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Set up Git repository
-        uses: actions/checkout@v4
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
 
-      - name: Compile LaTeX document
-        uses: xu-cheng/latex-action@v3
+      # Compiles
+      - name: Build Latex PDF and HTML
+        run: |
+          sudo apt update
+          sudo apt install texlive-full
+          mkdir ./src
+          cp *.tex src/
+          cd src/
+          pdflatex main.tex
+          make4ht main.tex
+          mv main.html index.html
+
+      # Uploads the PDF
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
         with:
-          root_file: src/main.tex
-          work_in_root_file_dir: true
+          name: PDF
+          path: src/main.pdf
 
-      - name: Deploy PDF to GitHub Pages
+      # Publishes the PDF as a release
+      - name: Publish PDF
+        uses: softprops/action-gh-release@v1
+        # if: startsWith(github.ref, 'refs/tags/')
+        with:
+          tag_name: Current
+          files: src/main.pdf
+
+      # Publish HTML to GitHub Pages
+      - name: Publish HTML to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          publish_dir: src # Carica il PDF compilato dalla cartella src
-          personal_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./src
