--- a/.github/workflows/compile_latex.yml
+++ b/.github/workflows/compile_latex.yml
@@ -52,16 +52,16 @@ jobs:
           mkdir ./src
           cp *.tex src/
           cd src/
-          pdflatex main.tex
-          make4ht main.tex
-          mv main.html index.html
+          pdflatex boh.tex
+          make4ht boh.tex
+          mv boh.html index.html
 
       # Uploads the PDF
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: PDF
-          path: src/main.pdf
+          path: src/boh.pdf
 
       # Publishes the PDF as a release
       - name: Publish PDF
@@ -69,7 +69,7 @@ jobs:
         # if: startsWith(github.ref, 'refs/tags/')
         with:
           tag_name: Current
-          files: src/main.pdf
+          files: src/boh.pdf
 
       # Publish HTML to GitHub Pages
       - name: Publish HTML to GitHub Pages
