--- a/.github/workflows/compile_latex.yml
+++ b/.github/workflows/compile_latex.yml
@@ -1,78 +1,39 @@
-# This Action autogenerates PDFs and standalone HTML
-# out of your Overleaf projects (or any LaTeX-live project).
-#
-# PDF  generator: pdflatex
-# HTML generator: htlatex
-#
-# Both tools come from LaTeX Live and are executed on
-# the latest version of Ubuntu.
-#
-#    Given:
-#       A repository with a LaTeX project with main.tex in the root folder
-#
-#    On every push:
-#       This GitHub Action builds the project with LaTeX Live.
-#       A   PDF version of main.tex is uploaded to a Release called "Current."
-#           (Make sure that release exists first)
-#       An HTML version of main.tex is uploaded to a new branch called gh-pages.
-#           (Make sure GitHub Pages is active and reads from the gh-pages branch)
+name: Compile Latex and Release PDF
 
-name: Build and Deploy LaTeX Project
-
-permissions: write-all
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: ["main"]
-  pull_request:
-    branches: ["main"]
+    tags:
+      - "*.*.*"
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  build_latex:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Compiles
-      - name: Build Latex PDF and HTML
-        run: |
-          sudo apt update
-          sudo apt install texlive-full
-          cp *.tex src/
-          cd src/
-          pdflatex boh.tex
-          make4ht boh.tex
-          mv boh.html index.html
-
-      # Uploads the PDF
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
+      - name: Set up Git repository
+        uses: actions/checkout@v2
+      - name: Compile LaTeX document
+        uses: xu-cheng/latex-action@v2
         with:
-          name: PDF
-          path: src/boh.pdf
+          root_file: main.tex
 
-      # Publishes the PDF as a release
-      - name: Publish PDF
-        uses: softprops/action-gh-release@v1
-        # if: startsWith(github.ref, 'refs/tags/')
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: Current
-          files: src/boh.pdf
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
 
-      # Publish HTML to GitHub Pages
-      - name: Publish HTML to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./src
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./main.pdf
+          asset_name: main.pdf
+          asset_content_type: pdf
