--- a/.github/workflows/compile_latex.yml
+++ b/.github/workflows/compile_latex.yml
@@ -16,7 +16,7 @@ jobs:
         working-directory: ${{ env.DIR }}
         # run: latexmk -pdf -bibtex ${{ env.FILE }}
         # run: pdflatex ${{ env.FILE }}; bibtex ${{ env.FILE }}; pdflatex ${{ env.FILE }}; pdflatex ${{ env.FILE }};
-        run: pdflatex ${{ env.FILE }};
+        run: pdflatex ${{ env.FILE }}; pdflatex ${{ env.FILE }}
       - name: move
         run: mkdir -p github_artifacts && mv ${{ env.DIR }}/${{ env.FILE }}.pdf ./github_artifacts/
       - name: Upload pdf as artifact
