--- a/.github/workflows/compile_latex.yml
+++ b/.github/workflows/compile_latex.yml
@@ -29,6 +29,8 @@ jobs:
     needs: [paper]
     runs-on: ubuntu-latest
     steps:
+      - name: Create index.html
+        run: echo '<html><body><h1><a href="boh.pdf">Download PDF</a></h1></body></html>' > github_deploy/index.html
       - name: Checkout
         uses: actions/checkout@v3
       - uses: actions/download-artifact@v4
