--- a/.github/workflows/compile_latex.yml
+++ b/.github/workflows/compile_latex.yml
@@ -29,7 +29,15 @@ jobs:
     needs: [paper]
     runs-on: ubuntu-latest
     steps:
-      - name: Create index.html
+      - name: "Check file existence"
+        id: check_files
+        uses: andstor/file-existence-action@v2
+        with:
+          files: "index.html"
+      - name: crea file
+        if: steps.check_files.outputs.files_exists == 'true'
+        run: touch index.html
+      - name: Aggiungi index.html
         run: echo '<html><body><h1><a href="boh.pdf">Download PDF</a></h1></body></html>' > github_deploy/index.html
       - name: Checkout
         uses: actions/checkout@v3
